--- a/XDBAthesis.cfg
+++ b/XDBAthesis.cfg
@@ -56,7 +56,7 @@
 %% labels in the abstracts
 %%
 \def\XDBA@label@abstract{Õª\XDBAspace Òª}
-\def\XDBA@label@englishabstract{Abstract}
+\def\XDBA@label@englishabstract{ABSTRACT}
 \def\XDBA@label@keywords{¹Ø¼ü´Ê£º}
 \def\XDBA@label@englishkeywords{Keywords:~}
 
