--- a/XDBAthesis.cfg
+++ b/XDBAthesis.cfg
@@ -30,27 +30,52 @@
 
 %% labels in the title page
 %%
-\def\XDBA@label@class{班级}
-\def\XDBA@label@schoolnumber{学号}
 \def\XDBA@label@school{西安电子科技大学}
-\def\XDBA@label@thesis{本科毕业设计论文}
+%% labels for master thesis title page
+%%
+\ifXDBA@bachelor
 \def\XDBA@label@title{题\XDBAspace 目}
 \def\XDBA@label@college{学\XDBAspace 院}
 \def\XDBA@label@major{专\XDBAspace 业}
 \def\XDBA@label@author{学生姓名}
 \def\XDBA@label@advisor{导师姓名}
-
+\def\XDBA@label@thesis{本科毕业设计论文}
+\def\XDBA@label@class{班\XDBAquad 级}
+\def\XDBA@label@schoolnumber{学\XDBAquad 号}
+\else
+\def\XDBA@label@schoolnumber{学~\XDBAquad ~号}
+\def\XDBA@label@identifier{代~\XDBAquad ~号}
+\def\XDBA@label@classnumber{分~类~号}
+\def\XDBA@label@classification{密~\XDBAquad ~级}
+\def\XDBA@label@title{ {题{\zihao{-5}(中、英文)} 目}}
+\def\XDBA@label@majorclass{学科门类}
+\def\XDBA@label@major{学科、专业}
+\def\XDBA@label@author{作者姓名}
+\def\XDBA@label@advisor{指导教师姓名、职务}
+\def\XDBA@label@date{提交论文日期}
+\fi
 %%
 %% string values filled in the title page
 %%
-\def\XDBA@value@class{(班级)}
-\def\XDBA@value@schoolnumber{(学号)}
 \def\XDBA@value@title{(论~文~题~目）}
 \def\XDBA@value@resttitle{(论文题目续)}
-\def\XDBA@value@college{(学院)}
 \def\XDBA@value@major{(专业)}
 \def\XDBA@value@author{(学生姓名)}
 \def\XDBA@value@advisor{(导师姓名)}
+\def\XDBA@value@schoolnumber{(学号)}
+%% string values filled in master thesis title page
+\ifXDBA@bachelor
+\def\XDBA@value@college{(学院)}
+\def\XDBA@value@class{(班级)}
+\else
+\def\XDBA@value@entitle{(English Title)}
+\def\XDBA@value@enresttitle{(English Title)}
+\def\XDBA@value@identifier{(代号)}
+\def\XDBA@value@classnumber{(分类号)}
+\def\XDBA@value@classification{(密级)}
+\def\XDBA@value@majorclass{(学科门类)}
+\def\XDBA@value@date{二〇一二年十二月二十三日}
+\fi
 
 %%
 %% labels in the abstracts
