adjust for the new standard issued in Oct, 2012:
1. rm `\bfseries' for the chapter, section and subsection title format;
2. change the size of chapter title format to 3.

--- a/XDBAthesis-utf8.cfg
+++ b/XDBAthesis-utf8.cfg
@@ -91,20 +91,20 @@
 %%
 %% the chapter title format
 %%
-\def\CTEX@chapter@nameformat{\bfseries\heiti\zihao{-3}}
-\def\CTEX@chapter@titleformat{\bfseries\heiti\zihao{-3}}
+\def\CTEX@chapter@nameformat{\heiti\zihao{3}}
+\def\CTEX@chapter@titleformat{\heiti\zihao{3}}
 \def\CTEX@chapter@beforeskip{15\p@}
 \def\CTEX@chapter@afterskip{12\p@}
 %%
 %% the section title format
 %%
-\def\CTEX@section@format{\bfseries\songti\zihao{4}\centering}
+\def\CTEX@section@format{\songti\zihao{4}\centering}
 \def\CTEX@section@beforeskip{-3ex \@plus -1ex \@minus -.2ex}
 \def\CTEX@section@afterskip{1.0ex \@plus .2ex}
 %%
 %% the subsection title format
 %%
-\def\CTEX@subsection@format{\bfseries\songti\zihao{-4}}
+\def\CTEX@subsection@format{\songti\zihao{-4}}
 \def\CTEX@subsection@indent{0\ccwd}
 \def\CTEX@subsection@beforeskip{-2.5ex \@plus -1ex \@minus -.2ex}
 \def\CTEX@subsection@afterskip{1.0ex \@plus .2ex}
