drops GBK support

--- a/XDBAthesis.cfg
+++ b/XDBAthesis.cfg
@@ -26,85 +26,85 @@
 %%
 %% the setup of ctex package
 %%
-\def\CTEX@contentsname{Ä¿\XDBAspace Â¼}
+\def\CTEX@contentsname{ç›®\XDBAspace å½•}
 
 %% labels in the title page
 %%
-\def\XDBA@label@school{Î÷°²µç×Ó¿Æ¼¼´óÑ§}
+\def\XDBA@label@school{è¥¿å®‰ç”µå­ç§‘æŠ€å¤§å­¦}
 %% labels for master thesis title page
 %%
 \ifXDBA@bachelor
-\def\XDBA@label@title{Ìâ\XDBAspace Ä¿}
-\def\XDBA@label@college{Ñ§\XDBAspace Ôº}
-\def\XDBA@label@major{×¨\XDBAspace Òµ}
-\def\XDBA@label@author{Ñ§ÉúĞÕÃû}
-\def\XDBA@label@advisor{µ¼Ê¦ĞÕÃû}
-\def\XDBA@label@thesis{±¾¿Æ±ÏÒµÉè¼ÆÂÛÎÄ}
-\def\XDBA@label@class{°à\XDBAquad ¼¶}
-\def\XDBA@label@schoolnumber{Ñ§\XDBAquad ºÅ}
+\def\XDBA@label@title{é¢˜\XDBAspace ç›®}
+\def\XDBA@label@college{å­¦\XDBAspace é™¢}
+\def\XDBA@label@major{ä¸“\XDBAspace ä¸š}
+\def\XDBA@label@author{å­¦ç”Ÿå§“å}
+\def\XDBA@label@advisor{å¯¼å¸ˆå§“å}
+\def\XDBA@label@thesis{æœ¬ç§‘æ¯•ä¸šè®¾è®¡è®ºæ–‡}
+\def\XDBA@label@class{ç­\XDBAquad çº§}
+\def\XDBA@label@schoolnumber{å­¦\XDBAquad å·}
 \else
-\def\XDBA@label@schoolnumber{Ñ§~\XDBAquad ~ºÅ}
-\def\XDBA@label@identifier{´ú~\XDBAquad ~ºÅ}
-\def\XDBA@label@classnumber{·Ö~Àà~ºÅ}
-\def\XDBA@label@classification{ÃÜ~\XDBAquad ~¼¶}
-\def\XDBA@label@title{ {Ìâ{\zihao{-5}(ÖĞ¡¢Ó¢ÎÄ)} Ä¿}}
-\def\XDBA@label@majorclass{Ñ§¿ÆÃÅÀà}
-\def\XDBA@label@major{Ñ§¿Æ¡¢×¨Òµ}
-\def\XDBA@label@author{×÷ÕßĞÕÃû}
-\def\XDBA@label@advisor{Ö¸µ¼½ÌÊ¦ĞÕÃû¡¢Ö°Îñ}
-\def\XDBA@label@date{Ìá½»ÂÛÎÄÈÕÆÚ}
+\def\XDBA@label@schoolnumber{å­¦~\XDBAquad ~å·}
+\def\XDBA@label@identifier{ä»£~\XDBAquad ~å·}
+\def\XDBA@label@classnumber{åˆ†~ç±»~å·}
+\def\XDBA@label@classification{å¯†~\XDBAquad ~çº§}
+\def\XDBA@label@title{ {é¢˜{\zihao{-5}(ä¸­ã€è‹±æ–‡)} ç›®}}
+\def\XDBA@label@majorclass{å­¦ç§‘é—¨ç±»}
+\def\XDBA@label@major{å­¦ç§‘ã€ä¸“ä¸š}
+\def\XDBA@label@author{ä½œè€…å§“å}
+\def\XDBA@label@advisor{æŒ‡å¯¼æ•™å¸ˆå§“åã€èŒåŠ¡}
+\def\XDBA@label@date{æäº¤è®ºæ–‡æ—¥æœŸ}
 \fi
 %%
 %% string values filled in the title page
 %%
-\def\XDBA@value@title{(ÂÛ~ÎÄ~Ìâ~Ä¿£©}
-\def\XDBA@value@resttitle{(ÂÛÎÄÌâÄ¿Ğø)}
-\def\XDBA@value@major{(×¨Òµ)}
-\def\XDBA@value@author{(Ñ§ÉúĞÕÃû)}
-\def\XDBA@value@advisor{(µ¼Ê¦ĞÕÃû)}
-\def\XDBA@value@schoolnumber{(Ñ§ºÅ)}
+\def\XDBA@value@title{(è®º~æ–‡~é¢˜~ç›®ï¼‰}
+\def\XDBA@value@resttitle{(è®ºæ–‡é¢˜ç›®ç»­)}
+\def\XDBA@value@major{(ä¸“ä¸š)}
+\def\XDBA@value@author{(å­¦ç”Ÿå§“å)}
+\def\XDBA@value@advisor{(å¯¼å¸ˆå§“å)}
+\def\XDBA@value@schoolnumber{(å­¦å·)}
 %% string values filled in master thesis title page
 \ifXDBA@bachelor
-\def\XDBA@value@college{(Ñ§Ôº)}
-\def\XDBA@value@class{(°à¼¶)}
+\def\XDBA@value@college{(å­¦é™¢)}
+\def\XDBA@value@class{(ç­çº§)}
 \else
 \def\XDBA@value@entitle{(English Title)}
 \def\XDBA@value@enresttitle{(English Title)}
-\def\XDBA@value@identifier{(´úºÅ)}
-\def\XDBA@value@classnumber{(·ÖÀàºÅ)}
-\def\XDBA@value@classification{(ÃÜ¼¶)}
-\def\XDBA@value@majorclass{(Ñ§¿ÆÃÅÀà)}
-\def\XDBA@value@date{¶ş©–Ò»¶şÄêÊ®¶şÔÂ¶şÊ®ÈıÈÕ}
+\def\XDBA@value@identifier{(ä»£å·)}
+\def\XDBA@value@classnumber{(åˆ†ç±»å·)}
+\def\XDBA@value@classification{(å¯†çº§)}
+\def\XDBA@value@majorclass{(å­¦ç§‘é—¨ç±»)}
+\def\XDBA@value@date{äºŒã€‡ä¸€äºŒå¹´åäºŒæœˆäºŒåä¸‰æ—¥}
 \fi
 
 %%
 %% labels in the abstracts
 %%
-\def\XDBA@label@abstract{Õª\XDBAspace Òª}
+\def\XDBA@label@abstract{æ‘˜\XDBAspace è¦}
 \def\XDBA@label@englishabstract{ABSTRACT}
-\def\XDBA@label@keywords{¹Ø¼ü´Ê£º}
+\def\XDBA@label@keywords{å…³é”®è¯ï¼š}
 \def\XDBA@label@englishkeywords{Keywords:~}
 
 %% labels in the thanks
 %%
-\def\XDBA@label@thanks{ÖÂ\XDBAspace Ğ»}
+\def\XDBA@label@thanks{è‡´\XDBAspace è°¢}
 %%
 %% the chapter title format
 %%
-\def\CTEX@chapter@nameformat{\bfseries\heiti\zihao{-3}}
-\def\CTEX@chapter@titleformat{\bfseries\heiti\zihao{-3}}
+\def\CTEX@chapter@nameformat{\heiti\zihao{3}}
+\def\CTEX@chapter@titleformat{\heiti\zihao{3}}
 \def\CTEX@chapter@beforeskip{15\p@}
 \def\CTEX@chapter@afterskip{12\p@}
 %%
 %% the section title format
 %%
-\def\CTEX@section@format{\bfseries\songti\zihao{4}\centering}
+\def\CTEX@section@format{\songti\zihao{4}\centering}
 \def\CTEX@section@beforeskip{-3ex \@plus -1ex \@minus -.2ex}
 \def\CTEX@section@afterskip{1.0ex \@plus .2ex}
 %%
 %% the subsection title format
 %%
-\def\CTEX@subsection@format{\bfseries\songti\zihao{-4}}
+\def\CTEX@subsection@format{\songti\zihao{-4}}
 \def\CTEX@subsection@indent{0\ccwd}
 \def\CTEX@subsection@beforeskip{-2.5ex \@plus -1ex \@minus -.2ex}
 \def\CTEX@subsection@afterskip{1.0ex \@plus .2ex}
@@ -119,23 +119,23 @@
 %% the theorems definitions
 %%
 \theoremstyle{plain}
-  \newtheorem{algo}{Ëã·¨~}[chapter]
-  \newtheorem{thm}{¶¨Àí~}[chapter]
-  \newtheorem{lem}[thm]{ÒıÀí~}
-  \newtheorem{prop}[thm]{ÃüÌâ~}
-  \newtheorem{cor}[thm]{ÍÆÂÛ~}
+  \newtheorem{algo}{ç®—æ³•~}[chapter]
+  \newtheorem{thm}{å®šç†~}[chapter]
+  \newtheorem{lem}[thm]{å¼•ç†~}
+  \newtheorem{prop}[thm]{å‘½é¢˜~}
+  \newtheorem{cor}[thm]{æ¨è®º~}
 \theoremstyle{definition}
-  \newtheorem{defn}{¶¨Òå~}[chapter]
-  \newtheorem{conj}{²ÂÏë~}[chapter]
-  \newtheorem{exmp}{Àı~}[chapter]
-  \newtheorem{rem}{×¢~}
-  \newtheorem{case}{ÇéĞÎ~}
+  \newtheorem{defn}{å®šä¹‰~}[chapter]
+  \newtheorem{conj}{çŒœæƒ³~}[chapter]
+  \newtheorem{exmp}{ä¾‹~}[chapter]
+  \newtheorem{rem}{æ³¨~}
+  \newtheorem{case}{æƒ…å½¢~}
 \theoremstyle{break}
-  \newtheorem{bthm}[thm]{¶¨Àí~}
-  \newtheorem{blem}[thm]{ÒıÀí~}
-  \newtheorem{bprop}[thm]{ÃüÌâ~}
-  \newtheorem{bcor}[thm]{ÍÆÂÛ~}
-\renewcommand{\proofname}{\bf Ö¤Ã÷}
+  \newtheorem{bthm}[thm]{å®šç†~}
+  \newtheorem{blem}[thm]{å¼•ç†~}
+  \newtheorem{bprop}[thm]{å‘½é¢˜~}
+  \newtheorem{bcor}[thm]{æ¨è®º~}
+\renewcommand{\proofname}{\bf è¯æ˜}
 \endinput
 %%
 %% End of file `XDBAthesis.cfg'.
